@@ -1,3 +1,6 @@
+Oct 24, 2002: Alex Burger <alex@users.sourceforge dot net>
+- Improve custom args editor
+
 Oct 24, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - code cleanup
 - do not append first argument directly to ip in ut to be consistent with q3
